test/sh/error/misc/invalid_block_in_def.sk
x := 1 {
	# invalid
}
